@@ -12,6 +12,11 @@ Bug Fixes
 - Explicit url dispatch regexes can now contain colons.
   https://github.com/Pylons/pyramid/issues/629
 
+- On at least one 64-bit Ubuntu system under Python 3.2, using the
+  ``view_config`` decorator caused a ``RuntimeError: dictionary changed size
+  during iteration`` exception.  It no longer does.  See
+  https://github.com/Pylons/pyramid/issues/635 for more information.
+
 Features
 --------
 
